# fractal-wgpu

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: camera.rs  canvas.rs  controls.rs  greeting.txt  main.rs  shader.wgsl
lib/: Cargo.toml
lib/src/: camera.rs  canvas.rs  canvas_render_pipeline.rs  lib.rs  shader.rs  shader.wgsl
src/: camera.rs  canvas.rs  canvas_render_pipeline.rs  controls.rs  greeting.txt  main.rs  shader.rs  shader.wgsl  vertex.rs
web/: Cargo.toml  README.md  fractal.html
web/src/: lib.rs
