[package]
name = "fractal-wgpu"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fractal-wgpu-lib = { path = "../lib" }
anyhow = "1.0.96"
bytemuck = { version = "1.21.0", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.26"
pollster = "0.4.0"
wgpu = "24.0.1"
winit = "0.29"
