[package]
name = "fractal-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fractal-wgpu-lib = { path = "../lib" }
anyhow = "1.0.80"
bytemuck = { version = "1.14.3", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.21"
pollster = "0.4.0"
winit = "0.30.9"
