[package]
name = "fractal-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fractal-wgpu-lib = { path = "../lib" }
anyhow = "1.0.98"
bytemuck = { version = "1.23.1", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
winit = "0.30.11"
