[package]
name = "fractal-wgpu-lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
bytemuck = { version = "1.21.0", features = ["derive"] }
wgpu = { version = "24.0.1", features = ["webgl"] }
winit = "0.29.0"
