[package]
name = "fractal-wgpu-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bytemuck = { version = "1.14.3", features = ["derive"] }
wgpu = { version = "24.0.1", features = ["webgl"] }
