[package]
name = "fractal-wgpu-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We wanna run this crate in the browser using web assembly
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
# Send logs to javascript console
console_log = "1.0.0"
fractal-wgpu-lib = { path = "../lib" }
log = "0.4.21"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element"] }
winit = "0.29.0"
